type hints and minor fixes in html/js

--- a/website/about.html
+++ b/website/about.html
@@ -37,9 +37,10 @@
 
 <lu class="generaltext">
 <H1>About PseudoDojo</H1>
-The PseudoDojo.org website gives access to the latest released version of the pseudopotentials of the PseudoDojo project.<BR />
-The PseudoDojo project is hosted on <a href="https://github.com/gmatteo/pseudo_dojo">github</a>. It is a python package to develop, test and store pseudo potentials.<BR />
-Previous versions can be found in the git repository.<BR />
+The PseudoDojo.org website gives access to the latest released version of the pseudopotentials of the PseudoDojo project.<BR>
+The PseudoDojo project is hosted on <a href="https://github.com/gmatteo/pseudo_dojo">github</a>.
+It is a python package to develop, test and store pseudo potentials.<BR>
+Previous versions can be found in the git repository.<BR>
 
 <P> The web interface provides various files:</P>
 <ul>
@@ -51,10 +52,10 @@ Previous versions can be found in the git repository.<BR />
 <li><b>djrepo</b> : (NC) the test report of the pseudo as a json document.</li>
 </ul>
 
-<P> The current version provided at this web interface are<BR />
- NC version 0.4: ONCVPSP_PDv0.4 in the git repository.<BR />
- NC version 0.3: ONCVPSP_PDv0.3 in the git repository.<BR />
- PAW JTH version 1.0.<BR />
+<P> The current version provided at this web interface are<BR>
+ NC version 0.4: ONCVPSP_PDv0.4 in the git repository.<BR>
+ NC version 0.3: ONCVPSP_PDv0.3 in the git repository.<BR>
+ PAW JTH version 1.0.<BR>
 </P>
 
 <H1>Contributors Pseudo Dojo</H1>
